--- a/src/components/PopupSearch/PopupSearch.module.css
+++ b/src/components/PopupSearch/PopupSearch.module.css
@@ -1,23 +1,37 @@
-.searchContainer{
+.blur-container {
     position: relative;
-  }
-  .inputSearch {
-    padding-left: 30px;
-  }
-  .searchIcon {
+    width: 100%;
+    height: 100vh;
+    background: rgba(33, 43, 54, 0.4);
+    
+    overflow: hidden;
+    z-index: 1;
+}
+
+.searchContainer {
+    position: relative;
+    width: 45%;
+}
+
+.inputSearch {
+    width: 400px;
+   padding-left: 30px !important;
+}
+
+.searchIcon {
     position: absolute;
     top: 50%;
     left: 10px;
     transform: translateY(-50%);
-  }
+}
 
-  .inputSearch:focus {
-  
+.inputSearch:focus {
+
     box-shadow: none;
-    background-color: transparent;
-    outline: 2px solid rgb(52,126,239);
-  }
-  .iconList {
+    outline: none;
+}
+
+.iconList {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -29,4 +43,4 @@
     border: 1px solid #000;
     font-size: 20px;
     cursor: pointer;
-  }
+}
