--- a/src/index.css
+++ b/src/index.css
@@ -172,3 +172,17 @@ footer {
   background: #eee;
   padding: 10px;
 }
+
+/* 88888888888888888888888888 */
+@media (max-width: 768px) {
+  .navbar .search-form {
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+  }
+
+  .navbar .search-form form {
+    display: flex;
+    align-items: center;
+  }
+}
